--- a/.env.template
+++ b/.env.template
@@ -2,6 +2,10 @@ PORT=3003
 
 # https://dashboard.stripe.com/test/apikeys
 STRIPE_SECRET=
-STRIPE_ENDPOINT_SECRET=
 STRIPE_SUCCESS_URL=
 STRIPE_CANCEL_URL=
+# https://dashboard.stripe.com/test/webhooks/<endpoint_secret>
+STRIPE_ENDPOINT_SECRET=
+
+# NATS_SERVERS="nats://localhost:4222, nats://localhost:4223"  
+NATS_SERVERS="nats://localhost:4222"
